--- a/assets/css/custon.css
+++ b/assets/css/custon.css
@@ -143,22 +143,28 @@ body {
 }
 
 .pera {
-    font-size: 20px !important;
+    font-size: 18px !important;
 }
 
 .hero-padding {
     padding: 87px 0 110px 0;
     background-color: blueviolet;
+    background-image: url(../images/bg.jpg);
     height: 1000px;
+    margin-top: -107px;
 }
 
 .helpful-area {
-    margin-top: -260px;
+    margin-top: -317px;
 }
 
 .header-area .main-header {
     background-color: #892be2;
     font-family: var(--Inter);
+}
+
+.helpful-card:hover .helpful-card-icon i {
+    color: #3c006c;
 }
 
 .header-area .main-menu .listing .single-list .single {
@@ -167,7 +173,7 @@ body {
     color: #ffffff;
     font-weight: 600;
     display: block;
-    font-size: 18px;
+    font-size: 14px;
     padding: 43px 0;
     text-transform: capitalize;
 }
@@ -219,7 +225,7 @@ body {
 }
 
 .btn-primary-fill {
-    padding: 14px 30px;
+    padding: 10px 25px;
     color: var(--white);
     text-transform: capitalize;
     border: 0px solid transparent;
@@ -236,13 +242,19 @@ body {
 }
 
 .logo img {
-    max-width: 230px;
+    max-width: 180px;
+}
+
+.btn-primary-fill:hover {
+    background: none;
+    border: 1px solid #ffffff;
+    color: #ffffff;
 }
 
 .hero-caption-one .title {
     display: block;
-    font-size: 60px;
-    line-height: 54px;
+    font-size: 52px;
+    line-height: 48px;
     margin-bottom: 15px;
     color: #ffffff;
     font-family: 'Space Grotesk', sans-serif;
@@ -328,13 +340,17 @@ body {
 
 .video-play-button,
 .video-play-button-two {
-    top: 26%;
-    left: 11%;
+    top: 45%;
+    left: 18%;
 }
 
 .footer-bg-one {
     background: linear-gradient(147deg, #3c006c 0%, #4227a7 99.4%);
     position: relative;
+}
+
+.video-play-button.video-play-button:hover:after, .video-play-button-two.video-play-button:hover:after {
+    background-color: #FF9800;
 }
 
 .footer-wrapper .footer-imp-link .footer-link .imp-link .single-list .imp-icon {
